// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render with default styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-radius: 16px;
  border: 2px solid #E6E6E6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 16px 24px;
}

<div
  class="circuit-0"
/>
`;

exports[`Card should render with giga spacing styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-radius: 16px;
  border: 2px solid #E6E6E6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 16px 24px;
}

<div
  class="circuit-0"
/>
`;

exports[`Card should render with mega spacing styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-radius: 16px;
  border: 2px solid #E6E6E6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 16px 16px;
}

<div
  class="circuit-0"
/>
`;
